// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessmentExplanation MCAssessmentExplanation renders with isShowingExplanation=false 1`] = `
<div
  className="solution"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
  >
    <button
      aria-label={undefined}
      aria-selected={undefined}
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Read an explanation of the answer
    </button>
  </div>
  <div />
</div>
`;

exports[`MCAssessmentExplanation MCAssessmentExplanation renders with isShowingExplanation=true 1`] = `
<div
  className="solution"
>
  <div
    className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
  >
    <button
      aria-label={undefined}
      aria-selected={undefined}
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Hide Explanation
    </button>
  </div>
  <div>
    <div
      aria-labelledby="obojobo-draft--chunks--mc-assessment--solution-label"
      className="solution-container"
      role="region"
      tabIndex="-1"
    >
      <span
        className="for-screen-reader-only"
        id="obojobo-draft--chunks--mc-assessment--solution-label"
      >
        Explanation of the answer:
      </span>
      <div>
        Mock Component
      </div>
    </div>
  </div>
</div>
`;
